# ogs-FDM-PETSc

./: CMakeLists.txt  FiniteDifference.cpp  README  RasterRecharge.cpp  RasterRecharge.h  art_cpp.sh  bc.cpp  bc.h  equation_class.cpp  equation_class.h  fdm.cpp  fdm.h  fdm.vcproj  geo.cpp  geo.h  main.cpp  mat.cpp  mat.h  matrix_class.cpp  matrix_class.h  misc.cpp  misc.h  numerics.cpp  numerics.h  out.cpp  out.h  raster_Recharge.cpp  raster_recharge.h
Cmake/: base.cmake
Common/: CMakeLists.txt  misc.cpp  misc.h
Example/Ensemble_56/: thiem.geo
Example/Quad/: example.geo
Example/Selke/: example.geo
Example/Square/: sq.geo
FDM/: CMakeLists.txt  ConditionDataBC.cpp  ConditionDataBC.h  FiniteDifference.cpp  FiniteDifference.h  MatProperty.cpp  MatProperty.h  Numerics.cpp  Output.cpp  Output.h  RasterRecharge.cpp  RasterRecharge.h  bc.cpp  bc.h  main.cpp  numerics.h
Geometry/: CMakeLists.txt  GeoEntity.h  Geometry.cpp  Geometry.h  Point.cpp  Point.h  Polyline.cpp  Polyline.h
LinearSolver/: CMakeLists.txt  LinearEQS.cpp  LinearEQS.h  PETScLinearSolver.cpp  PETScLinearSolver.h
Math/: CMakeLists.txt  Matrix.cpp  Matrix.h  SparseMatrix.cpp  SparseMatrix.h  SparseTable.cpp  SparseTable.h  SymMatrix.cpp  SymMatrix.h
Numerics/: CMakeLists.txt  Numerics.cpp  Numerics.h
